--- a/hotline-miami/index.html
+++ b/hotline-miami/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <base href="https://cdn.jsdelivr.net/gh/genizy/web-port@23bcb22895b42008359e76f1e08f1b7fad4a71e9/hotline-miami/">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="pragma" content="no-cache"/>
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
@@ -66,7 +64,7 @@
         <canvas id="canvas"></canvas>
     </div>
 
-    <script type="text/javascript" src="html5game/HotlineMiami.js?XIUAC=2092382048"></script>
+    <script type="text/javascript" src="html5game/HotlineMiami.js"></script>
     <script>
         function resizeCanvas() {
             const canvas = document.getElementById("canvas");
