--- a/hotline-miami/index.html
+++ b/hotline-miami/index.html
@@ -65,7 +65,7 @@
         <canvas id="canvas"></canvas>
     </div>
 
-    <script type="text/javascript" src="html5game/HotlineMiami.js"></script>
+    <script type="text/javascript" src="html5game/HotlineMiami.js?XIUAC=2092382048"></script>
     <script>
         function resizeCanvas() {
             const canvas = document.getElementById("canvas");
