--- a/hotline-miami/index.html
+++ b/hotline-miami/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <base href="https://github.com/genizy/web-port/">
+    <base href="https://github.com/genizy/web-port/blob/main/hotline-miami/html5game/HotlineMiami.js">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="pragma" content="no-cache"/>
     <meta name="apple-mobile-web-app-capable" content="yes" />
